# internal/controller/restapi/v1/admin/controller.go
@@ -9,25 +9,27 @@ import (
 )
 
 type controller struct {
-	users     usecase.User
-	languages usecase.Language
-	levels    usecase.Level
-	topics    usecase.Topic
-	channels  usecase.Channel
-	verifier  middleware.TokenVerifier
-	log       logger.Interface
-	validate  *validator.Validate
+	users      usecase.User
+	languages  usecase.Language
+	levels     usecase.Level
+	topics     usecase.Topic
+	channels   usecase.Channel
+	adminUsers usecase.AdminUser
+	verifier   middleware.TokenVerifier
+	log        logger.Interface
+	validate   *validator.Validate
 }
 
-func newController(users usecase.User, languages usecase.Language, levels usecase.Level, topics usecase.Topic, channels usecase.Channel, verifier middleware.TokenVerifier, log logger.Interface) *controller {
+func newController(users usecase.User, languages usecase.Language, levels usecase.Level, topics usecase.Topic, channels usecase.Channel, adminUsers usecase.AdminUser, verifier middleware.TokenVerifier, log logger.Interface) *controller {
 	return &controller{
-		users:     users,
-		languages: languages,
-		levels:    levels,
-		topics:    topics,
-		channels:  channels,
-		verifier:  verifier,
-		log:       log,
-		validate:  validator.New(validator.WithRequiredStructEnabled()),
+		users:      users,
+		languages:  languages,
+		levels:     levels,
+		topics:     topics,
+		channels:   channels,
+		adminUsers: adminUsers,
+		verifier:   verifier,
+		log:        log,
+		validate:   validator.New(validator.WithRequiredStructEnabled()),
 	}
 }
