# internal/controller/restapi/v1/admin/request/user.go
@@ -1,0 +1,9 @@
+package request
+
+type UserStatus struct {
+	IsActive *bool `json:"isActive" validate:"required" example:"false"`
+}
+
+type UserRole struct {
+	Role string `json:"role" validate:"required,oneof=user admin" example:"admin"`
+}
